package com.english.learning.dao;

public interface ICategoryDAO {
}
