package com.english.learning.dao;

public interface IUserDAO {
}
