package com.english.learning.dao.impl;

public class SentenceDAOImpl {
}
