package com.english.learning.service;

public interface ILessonService {
}